# CiteLine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLOUD_SETUP_COMPLETE.md  Dockerfile  MOAT_FEATURES_PLAN.txt  README.md  check_test45.py  citeline-download-test-corpus.ps1  claude-code-prompt-citeline.md  create-oracle-worker.ps1  create-worker-service.md  critique_3b0464c94bdb43a49129fe3724a83405.md  critique_test.md  debug_dates.py  debug_discharge_text.py  debug_export.py  debug_julia_raw.py  debug_log.txt  eval_output.txt  glmplan.txt  inspect_db.py  inspect_page_text.py  inspect_schema_errors.py  pyproject.toml  queue_debug_run.py  render.yaml  render_update_env.json  reproduce_issue.py  reproduce_issue_v2.py  setup-worker.sh  show_final_output.py  test_e2e_full_flow.py  test_extraction_quality.py  test_fix.py  test_fix.py.bak  test_frontend_api_flow.py  test_litigation_integration.py  (+6 more)
New folder/: build_citeline_corpus.py  build_citeline_realworld_corpus.py  build_ssa_admin_record_corpus.py  download_corpus.py  probe_cl.py  probe_cl_types.py  probe_query_syntax.py
citeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: test_citeline.db  test_citeline_api.db
demo_packet/: README.md
docs/: litigation_output_contract.md  missing_record_detection_clinical_audit.md  missing_record_detection_test_report.md  pi-chronology-mvp.pipeline.md  pilot_runbook.md  pilot_terms.md  roadmap.md
final_litigation_505/: packet_index.json
governance/: invariants.md
litigation1200/: ground_truth.json  packet_index.json
litigation_packet_v2/: ground_truth.json  packet_index.json
litigation_packet_v4/: ground_truth.json  packet_index.json
ontological_war_zone/: ground_truth.json  packet_index.json
output/: paralegal_eval_report.json  paralegal_eval_smoke.md
output_dir/: ground_truth.json  packet_index.json
readiness/: AWS_CLI_Deploy_Sequence_Ontogra.md  AWS_Deployment_Checklist_Ontogra.md  HIPAA_Gap_Checklist_Ontogra_2026-02-19.md  HIPAA_Low_Risk_Rollout_Playbook_2026-02-19.md  overnight50_results.json  (+32 more)
(+733 files in other folders)
