[project]
name = "citeline"
version = "0.1.0"
description = "CiteLine – Citeable medical chronologies for PI law firms"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "pymupdf>=1.23",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "reportlab>=4.0",
    "python-docx>=1.1",
    "jsonschema>=4.20",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.26",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*", "packages*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
