[project]
name = "linecite"
version = "0.1.0"
description = "Linecite – Citeable medical chronologies for PI law firms"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "pymupdf>=1.23",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "reportlab>=4.0",
    "python-docx>=1.1",
    "jsonschema>=4.20",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.26",
    "pytest-asyncio>=0.23",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*", "packages*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: fast unit tests",
    "integration: database/API integration tests",
    "slow: tests that take >10s",
    "ocr: tests requiring Tesseract",
    "perf: performance benchmarks",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
